<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:orientation="vertical"
    tools:context=".ui.my.activity.SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/about_us_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:clipChildren="false"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/about_us_toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/setting_title" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/setting_other_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_dimen_8dp"
        android:background="@color/grey_200"
        app:cardCornerRadius="@dimen/common_dimen_3dp"
        app:cardElevation="@dimen/common_dimen_2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_50"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/common_dimen_12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_update" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_dimen_12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_updata"
                    android:textColor="@color/grey_700" />

                <TextView
                    android:id="@+id/tv_setting_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/background_dark" />
            </LinearLayout>

            <include layout="@layout/divider_line" />

            <TextView
                android:id="@+id/ll_setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_feedback"
                android:drawablePadding="@dimen/common_dimen_12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/common_dimen_12dp"
                android:text="@string/setting_feedback"
                android:textColor="@color/grey_700" />

            <include layout="@layout/divider_line" />

            <LinearLayout
                android:id="@+id/ll_setting_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/common_dimen_12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_cache_clean" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_dimen_12dp"
                    android:layout_weight="1"
                    android:text="清理缓存"
                    android:textColor="@color/grey_700" />

                <TextView
                    android:id="@+id/tv_setting_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/background_dark" />
            </LinearLayout>

            <include layout="@layout/divider_line" />

            <TextView
                android:id="@+id/ll_setting_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_regarding"
                android:drawablePadding="@dimen/common_dimen_12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/common_dimen_12dp"
                android:text="@string/setting_regarding"
                android:textColor="@color/grey_700" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/tb_true"
        style="@style/comm_yz_button"
        android:text="@string/is_exit" />
</com.zhy.autolayout.AutoLinearLayout>